# schwab-advisor

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: code-review-walkthrough.html  production-runbook.md  research.md  schwab-account-inquiry-openapi.json  schwab-account-openapi.json  schwab-account-synchronization-openapi.json  schwab-accounts-preferences-and-authorizations-openapi.json  schwab-address-change-openapi.json  schwab-alerts-openapi.json  schwab-api-endpoints.md  schwab-balances-openapi.json  schwab-client-inquiry-openapi.json  schwab-cost-basis-openapi.json  schwab-daily-data-openapi.json  schwab-digital-account-open-openapi.json  schwab-document-preferences-openapi.json  schwab-feature-enrollment-openapi.json  schwab-irebal-openapi.json  schwab-man-fees-file-upload-openapi.json  schwab-positions-openapi.json  schwab-profiles-openapi.json  schwab-reports-openapi.json  schwab-service-request-openapi.json  schwab-standing-authorizations-openapi.json  schwab-status-openapi.json  schwab-trading-file-upload-openapi.json  schwab-trading-openapi.json  schwab-transactions-openapi.json  schwab-user-authorization-openapi.json  tech-validation-email-chain.md  tech-validation-scenarios.md  tech-validation-scenarios.xlsx  tech-validation-writeup.html
scripts/: collect_openapi_specs.sh  download_openapi_specs.js  oauth_login.py  validation_walkthrough.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_production_integration.py  test_sandbox_integration.py  test_server.py
(+6 files in other folders)
